--- a/Mentees/Chinmoy Saikia/Assignment-1/frontend/.gitignore
+++ b/Mentees/Chinmoy Saikia/Assignment-1/frontend/.gitignore
@@ -1,24 +1,23 @@
+# Node modules
+node_modules/
+
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Optional cache & build
+dist/
+build/
+.cache/
